// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`as-stacked-bar-widget Propery handling should handle data attribute 1`] = `
<as-stacked-bar-widget
  class="hydrated"
>
  
  <h2
    class="as-stacked-bar-widget__header"
  >
    
  </h2>
  <p
    class="as-stacked-bar-widget__description as-body"
  >
    
  </p>
  <p
    class="as-body"
  >
    No data availiable
  </p>
</as-stacked-bar-widget>
`;

exports[`as-stacked-bar-widget Propery handling should handle description attribute 1`] = `
<as-stacked-bar-widget
  class="hydrated"
  description="fake-description-attr"
>
  
  <h2
    class="as-stacked-bar-widget__header"
  >
    
  </h2>
  <p
    class="as-stacked-bar-widget__description as-body"
  >
    fake-description-attr
  </p>
  <p
    class="as-body"
  >
    No data availiable
  </p>
</as-stacked-bar-widget>
`;

exports[`as-stacked-bar-widget Propery handling should handle heading attribute 1`] = `
<as-stacked-bar-widget
  class="hydrated"
  heading="fake-heading-attr"
>
  
  <h2
    class="as-stacked-bar-widget__header"
  >
    fake-heading-attr
  </h2>
  <p
    class="as-stacked-bar-widget__description as-body"
  >
    
  </p>
  <p
    class="as-body"
  >
    No data availiable
  </p>
</as-stacked-bar-widget>
`;

exports[`as-stacked-bar-widget Propery handling should handle showLegend attribute 1`] = `
<as-stacked-bar-widget
  class="hydrated"
  show-legend="false"
>
  
  <h2
    class="as-stacked-bar-widget__header"
  >
    
  </h2>
  <p
    class="as-stacked-bar-widget__description as-body"
  >
    
  </p>
  <p
    class="as-body"
  >
    No data availiable
  </p>
</as-stacked-bar-widget>
`;

exports[`as-stacked-bar-widget Propery handling should handle valuesInfo attribute 1`] = `
<as-stacked-bar-widget
  class="hydrated"
>
  
  <h2
    class="as-stacked-bar-widget__header"
  >
    
  </h2>
  <p
    class="as-stacked-bar-widget__description as-body"
  >
    
  </p>
  <p
    class="as-body"
  >
    No data availiable
  </p>
</as-stacked-bar-widget>
`;
